--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-tk==0.1.0
+appscript==1.2.2
+et-xmlfile==1.1.0
+lxml==4.9.1
+numpy==1.23.5
 openpyxl==3.0.7
 pandas==1.3.2
+psutil==5.9.4
+PyPDF2==1.26.0
+python-dateutil==2.8.2
+pytz==2022.6
+six==1.16.0
+tk==0.1.0
 xlwings==0.24.9
-pyPDF2==1.26.0
