--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 .vscode/
-owl_system/__pycache__
+app_package/__pycache__
 
 # Folder
 venv/
 
 # Files
 initial_commands.txt
-owl_system/test.py
-owl_system/assets/Pasos manejo de archivos.md
-owl_system/assets/004-2022-00023 (Pame-SALIÓ) impugnada.txt
-owl_system/assets/chain_text_test00.ipynb
-owl_system/assets/chain_text_test01.ipynb
-owl_system/assets/Demo.gif
+app_package/test.py
+app_package/assets/Pasos manejo de archivos.md
+app_package/assets/004-2022-00023 (Pame-SALIÓ) impugnada.txt
+app_package/assets/chain_text_test00.ipynb
+app_package/assets/chain_text_test01.ipynb
+app_package/assets/Demo.gif
 
 #########
 
