--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 appscript==1.2.2
-et-xmlfile==1.1.0
 lxml==4.9.1
 numpy==1.23.5
-openpyxl==3.0.7
-pandas==1.3.2
+pandas==1.5.2
 psutil==5.9.4
-PyPDF2==1.26.0
+pypdf2==2.11.2
 python-dateutil==2.8.2
 pytz==2022.6
 six==1.16.0
 tk==0.1.0
-xlwings==0.24.9
+typing-extensions==4.4.0
+xlwings==0.28.5
