firs commit for refactor

--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,8 @@ app/__pycache__
 venv/
 
 # Files
-test/test.py
-app/assets/Pasos manejo de archivos.md
-app/assets/004-2022-00023 (Pame-SALIÓ) impugnada.txt
-app/assets/chain_text_test00.ipynb
-app/assets/chain_text_test01.ipynb
-app/assets/textchain.py
+test/caja_negra_test.py
+assets/Pasos manejo de archivos.md
 
 #########
 
