--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ app/__pycache__
 venv/
 
 # Files
-app/test.py
+app/assets/test.py
+app/assets/test_xlwings.py
 app/assets/Pasos manejo de archivos.md
 app/assets/004-2022-00023 (Pame-SALIÓ) impugnada.txt
 app/assets/chain_text_test00.ipynb
