--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ lxml==4.9.2
 numpy==1.23.5
 pandas==1.5.2
 psutil==5.9.5
-pypdf2==2.11.2
+PyPDF2==2.11.2
 python-dateutil==2.8.2
+python-docx==1.1.2
 pytz==2023.3
+pywin32==306
 six==1.16.0
 tk==0.1.0
-typing-extensions==4.6.2
+typing_extensions==4.12.2
 xlwings==0.28.5
