Mejora legibilidad del código - facilita la empaquetación - agrega instrucciones de uso - modifica README

--- a/.gitignore
+++ b/.gitignore
@@ -305,3 +305,5 @@ output/main/_internal/ucrtbase.dll
 output/main/_internal/VCRUNTIME140.dll
 src/app/assets/law_logo.ico
 src/app/assets/law_logo.png
+src/app/000IndiceElectronicoC0.xlsm
+src/app/assets/main_.py
