Agrega archivo comando.txt y optimiza manejo de memoria cerrando procesos de Excel en automatizacionEmpleado.py

--- a/.gitignore
+++ b/.gitignore
@@ -307,3 +307,4 @@ src/app/assets/law_logo.ico
 src/app/assets/law_logo.png
 src/app/000IndiceElectronicoC0.xlsm
 src/app/assets/main_.py
+src/app/assets/comando.txt
