--- a/assets/version_info.rc
+++ b/assets/version_info.rc
@@ -17,7 +17,7 @@ VSVersionInfo(
           StringStruct(u'FileDescription', u'GestionExpedienteElectronico_Version1'),
           StringStruct(u'FileVersion', u'1.4.0.0'),
           StringStruct(u'InternalName', u'GestionExpedienteElectronico_Version1'),
-          StringStruct(u'LegalCopyright', u'Copyright © 2024 Daniel Arbelaez. Licensed under the MIT License.'),
+          StringStruct(u'LegalCopyright', u'Daniel Arbelaez - Copyright © 2024. Licensed under the MIT License.'),
           StringStruct(u'OriginalFilename', u'GestionExpedienteElectronico_v1.4.0.exe'),
           StringStruct(u'ProductName', u'GestionExpedienteElectronico_Version1'),
           StringStruct(u'ProductVersion', u'1.4.0.0'),
