Actualiza la información de versión y cambia los enlaces de tutoriales en la GUI para apuntar a nuevas ubicaciones.

--- a/assets/version_info.rc
+++ b/assets/version_info.rc
@@ -14,14 +14,14 @@ VSVersionInfo(
       StringTable(
         u'040904B0', [
           StringStruct(u'CompanyName', u'Daniel Arbelaez Alvarez - HammerDev99'),
-          StringStruct(u'FileDescription', u'GestionExpedienteElectronico_Version1'),
+          StringStruct(u'FileDescription', u'Este proyecto fue desarrollado para automatizar una función administrativa, asistiendo las operaciones manuales que haría un empleado en la conformación del expediente electrónico.'),
           StringStruct(u'FileVersion', u'1.4.3.0'),
-          StringStruct(u'InternalName', u'GestionExpedienteElectronico_Version1'),
+          StringStruct(u'InternalName', u'AgilEx by Marduk'),
           StringStruct(u'LegalCopyright', u'Daniel Arbelaez - Copyright © 2024. Licensed under the MIT License.'),
-          StringStruct(u'OriginalFilename', u'GestionExpedienteElectronico_v1.4.3.exe'),
-          StringStruct(u'ProductName', u'GestionExpedienteElectronico_Version1'),
+          StringStruct(u'OriginalFilename', u'GestionExpedienteElectronico_Version1.exe'),
+          StringStruct(u'ProductName', u'AgilEx by Marduk'),
           StringStruct(u'ProductVersion', u'1.4.3.0'),
-          StringStruct(u'Comments', u'Este proyecto fue desarrollado para automatizar una función administrativa, asistiendo las operaciones manuales que haría un empleado en la conformación del expediente electrónico.')
+          StringStruct(u'Comments', u'')
         ]
       )
     ]),
