Elimina archivos innecesarios y reorganiza la estructura del paquete Python para adaptarse al patrón de arquitectura MVC. Actualiza los archivos main.spec, requirements.txt, las importaciones y para el caso de las referencias a rutas se implementó la utilidad resource_manager.py.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,17 @@
-lxml==4.9.2
+certifi==2024.8.30
+charset-normalizer==3.3.2
+idna==3.10
 numpy==1.23.5
 pandas==1.5.2
+pillow==11.0.0
 psutil==5.9.5
 pycryptodome==3.20.0
 pypdf2==2.11.2
 python-dateutil==2.8.2
-python-docx==1.1.2
 pytz==2023.3
 pywin32==306
+requests==2.32.3
+Send2Trash==1.8.3
 six==1.16.0
-tk==0.1.0
-typing-extensions==4.12.2
-xlwings==0.28.5
-certifi==2024.8.30 
-charset-normalizer==3.3.2 
-idna==3.10 
-requests==2.32.3 
 urllib3==2.2.3
-pillow==11.0.0
-send2trash==1.8.3
+xlwings==0.28.5
