Elimina el archivo main.py y crea __main__.py para iniciar la aplicación. Reorganiza importaciones y mejora la gestión de recursos en varios módulos. Actualiza .gitignore para incluir nuevas rutas.

--- a/.gitignore
+++ b/.gitignore
@@ -86,9 +86,10 @@ MANIFEST
 
 # Installer logs
 logs/
+config/
 pip-log.txt
 pip-delete-this-directory.txt
-
+src/test
 # Unit test / coverage reports
 htmlcov/
 .tox/
