Refactoriza la estructura del código para mejorar la legibilidad y mantenibilidad

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,8 +103,8 @@ markdown_extensions:
   - pymdownx.caret
   - pymdownx.details
   - pymdownx.emoji:
-      emoji_generator: !!python/name:materialx.emoji.to_svg
-      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
@@ -144,5 +144,14 @@ extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
+# Excluir archivos y carpetas específicas
+exclude_docs: |
+  others/
+  temp/
+  draft/
+  *.tmp
+  *.bak
+  6. ARCHITECTURE.md
 
 copyright: Copyright &copy; 2025 HammerDev99
