--- a/src/assets/version_info.rc
+++ b/src/assets/version_info.rc
@@ -13,15 +13,18 @@ VSVersionInfo(
     StringFileInfo([
       StringTable(
         u'040904B0', [
-          StringStruct(u'CompanyName', u'Daniel Arbelaez Alvarez - HammerDev99'),
-          StringStruct(u'FileDescription', u'AgilEx by Marduk - Automatización para el expediente electrónico, sustituyendo tareas manuales'),
+          StringStruct(u'CompanyName', u'Rama Judicial de Colombia - CENDOJ'),
+          StringStruct(u'FileDescription', u'AgilEx by Marduk - Automatización RDA para expediente electrónico judicial colombiano (PCSJA20-11567/2020)'),
           StringStruct(u'FileVersion', u'1.4.4.0'),
           StringStruct(u'InternalName', u'AgilEx by Marduk'),
-          StringStruct(u'LegalCopyright', u'Daniel Arbelaez - Copyright © 2024. Licensed under the MIT License.'),
-          StringStruct(u'OriginalFilename', u'GestionExpedienteElectronico_Version1.exe'),
-          StringStruct(u'ProductName', u'AgilEx by Marduk'),
+          StringStruct(u'LegalCopyright', u'Daniel Arbelaez Alvarez - Copyright © 2024-2025. Licensed under the MIT License.'),
+          StringStruct(u'LegalTrademarks', u'Consejo Superior de la Judicatura - Rama Judicial de Colombia'),
+          StringStruct(u'OriginalFilename', u'AgilEx_by_Marduk.exe'),
+          StringStruct(u'ProductName', u'AgilEx by Marduk - Gestión de Expediente Electrónico'),
           StringStruct(u'ProductVersion', u'1.4.4.0'),
-          StringStruct(u'Comments', u'')
+          StringStruct(u'PrivateBuild', u'Official Build - darbelaal@cendoj.ramajudicial.gov.co'),
+          StringStruct(u'SpecialBuild', u'Validated for Colombian Judicial System - No malware'),
+          StringStruct(u'Comments', u'Software de automatización robótica (RDA) para creación de índices electrónicos de expedientes judiciales. Utiliza xlwings para integración con Excel y psutil para gestión de procesos. Código fuente abierto: https://github.com/HammerDev99/GestionExpedienteElectronico_Version1')
         ]
       )
     ]),
