--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,18 @@
-altgraph==0.17.4
-annotated-types==0.7.0
-anyio==4.11.0
-babel==2.17.0
-backrefs==5.9
 certifi==2024.8.30
 charset-normalizer==3.3.2
-click==8.1.8
-colorama==0.4.6
-exceptiongroup==1.3.0
-ghp-import==2.1.0
-griffe==1.7.3
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
 idna==3.10
-importlib_metadata==8.6.1
-Jinja2==3.1.6
-Markdown==3.8.2
-MarkupSafe==3.0.2
-mergedeep==1.3.4
-mkdocs==1.6.1
-mkdocs-autorefs==1.4.2
-mkdocs-get-deps==0.2.0
-mkdocs-material==9.6.15
-mkdocs-material-extensions==1.3.1
-mkdocstrings==0.29.1
-mkdocstrings-python==1.16.12
 numpy==1.23.5
-packaging==24.2
-paginate==0.5.7
 pandas==1.5.2
-pathspec==0.12.1
-pefile==2023.2.7
 pillow==11.0.0
-platformdirs==4.3.8
 psutil==5.9.5
 pycryptodome==3.20.0
-pydantic==2.12.4
-pydantic_core==2.41.5
-Pygments==2.19.2
-pyinstaller==6.12.0
-pyinstaller-hooks-contrib==2025.1
-pymdown-extensions==10.16
-PyPDF2==2.11.2
+pypdf2==2.11.2
 python-dateutil==2.8.2
 pytz==2023.3
 pywin32==306
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-pyyaml_env_tag==1.1
 requests==2.32.3
 Send2Trash==1.8.3
 six==1.16.0
-sniffio==1.3.1
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-umami-analytics==0.2.20
 urllib3==2.2.3
-watchdog==6.0.0
 xlwings==0.28.5
-zipp==3.21.0
+umami-analytics==0.2.20
