--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 
 # Folder
 .venv/
+site/
+docs/deploy-docs/
 docs/0. Revisión de literatura
 docs/1. Análisis de requisitos
 docs/2. Diseño del sistema
