--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ edit_uri: edit/master/docs/source/
 theme:
   name: material
   language: es
+  custom_dir: overrides
   palette:
     - scheme: default
       primary: blue
